# stay_insight

./: .gitignore  README.md  app.py  config.py  output.json  pyproject.toml  reviews.db
review_ai/: analysis.py  prompt.py  utils.py
review_ai/static/: analyze.js  retrieve.js  script.js
review_ai/templates/: analyze.html  home.html  index.html  retrieve.html
tests/: test.py  test2.py
